--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -14,7 +14,7 @@
     </div>
     <div class="d-flex justify-content-between mb-3">
         <button (click)="login()" type="button" class="btn btn-primary">
-            <em class="fas fa-sign-in-alt">&nbsp;Sign in</em>
+            <em class="fas fa-sign-in-alt">&nbsp;Login</em>
         </button>
         <div>
             Don't have an account?&nbsp;
