--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -10,7 +10,7 @@
     </div>
     <div class="mb-3">
         <label for="password" class="form-label">Password</label>
-        <input [(ngModel)]="authRequest.password" type="email" class="form-control" id="password" placeholder="name@example.com">
+        <input [(ngModel)]="authRequest.password" type="password" class="form-control" id="password" placeholder="password">
     </div>
     <div class="d-flex justify-content-between mb-3">
         <button (click)="login()" type="button" class="btn btn-primary">
